[package]
name = "lsm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "lsm-test"
path = "src/server.rs"


[dependencies]
fjall = "0.6.0"
prost = "0.12"
tonic = "0.10.2"
tokio = { ver = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.0"
async-stream = "0.2.0"

[build-dependencies]
tonic-build = "0.10.2"